einstellung_derive/src/trybuild_tests/invalid_item_enum.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> src/trybuild_tests/invalid_item_enum.rs
  |
  | #[derive(Config)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
